samples/_failures_safe/1761424425_cd6980_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8513156d.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_8513156d.c:146:16: error: missing terminating " character
  146 |         printf("Unexpected token at line
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8513156d.c:146:9: error: expected expression at end of input
  146 |         printf("Unexpected token at line
      |         ^~~~~~
./samples/SAFE/__tmp_8513156d.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8513156d.c:146:9: error: expected declaration or statement at end of input
